k8s/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: kafka
  namespace: telecom

spec:
  replicas: 1

  selector:
    matchLabels:
      app: kafka

  template:
    metadata:
      labels:
        app: kafka

    spec:
      containers:
      - name: kafka

        image: apache/kafka:latest
        
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
        
          limits:
            cpu: 1500m
            memory: 2Gi
        
        ports:
        - containerPort: 9092
