k8s/subscriber-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: subscriber-service
  namespace: telecom

spec:
  replicas: 1

  selector:
    matchLabels:
      app: subscriber-service

  template:
    metadata:
      labels:
        app: subscriber-service

    spec:
      containers:
        - name: subscriber-service

          image: subscriber-service:v1
          imagePullPolicy: Never

          ports:
            - containerPort: 7070
          
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
           
            limits:
              cpu: 100m
              memory: 512Mi
              
          startupProbe:
            httpGet:
              path: /health
              port: 7070
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 12

          readinessProbe:
            httpGet:
              path: /ready
              port: 7070
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /live
              port: 7070
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
