k8s/mongodb.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mongodb
  namespace: telecom

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
        - name: mongodb
          image: mongo:8
          imagePullPolicy: IfNotPresent
          
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
              
            limits:
              cpu: 1000m
              memory: 1Gi

          ports:
            - containerPort: 27017

          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db

      volumes:
        - name: mongodb-storage
          persistentVolumeClaim:
            claimName: mongodb-pvc

---
apiVersion: v1
kind: Service

metadata:
  name: mongodb
  namespace: telecom

spec:
  selector:
    app: mongodb

  ports:
    - port: 27017
      targetPort: 27017

  type: ClusterIP
